# Luna-ai

./: .SRCINFO  .gitignore  API_REPORT.md  ARCH_LINUX_FIX_REPORT.md  CLI_QUICKSTART.md  INSTALLATION_REPORT.md  LICENSE  LUNA_AI_COMPLETE_GUIDE.md  Luna-AI.desktop  MEMORY_REPORT.md  PKGBUILD  QUICKSTART.md  README.md  VOICE_REPORT.md  arc.sh  cli_examples.py  cli_utils.py  fix.sh  fix1.sh  generate_reports.py  install.sh  install_arch_app.sh  luna_aur_package.sh  luna_chat.db  luna_cli_enhanced.py  luna_desktop.py  luna_launch.sh  luna_memory.db  luna_publish_aur.sh  main.py  metadata.json  package-lock.json  package.json  release.sh  requirements.txt  run.sh  server.py  test_backend.py  vite.config.ts
.github/: FUNDING.yml
backend/: main.py
backend/agents/: base_agent.py  git_agent.py  github_agent.py  linux_agent.py  package_manager.py  system.py
backend/api/: agents.py  routes.py  ws.py
backend/config/: paths.py
backend/core/: agent_orchestrator.py  brain.py  (+8 more)
core/: ai_engine.py  code_parser.py  env_helper.py  memory.py  system_ctrl.py  task_engine.py  voice_engine.py  wake_word.py  web_search.py  youtube_ctrl.py
luna-cli/: .SRCINFO  PKGBUILD  README.md  deploy_aur.sh  pyproject.toml
luna_chroma_db/: chroma.sqlite3
src/: App.tsx  index.css
src-tauri/: tauri.conf.json
ui/: boot_screen.py  code_block.py  main_window.py  settings_panel.py  widgets.py
win11/: .gitignore  AGENT_REPORT.md  CLI_GUIDE.md  FINAL_BACKEND_REPORT.md  LUNA_ANDROID_LAUNCHER_PROMPT.md  LUNA_CLI_ENHANCEMENTS.md  Luna-AI.desktop  PKGBUILD  PYTHON_AI_ARCHITECTURE.md  README.md  USER_GUIDE.txt  build_exe.py  cli.py  cli_config.py  index.html  install.ps1  install_arch_app.sh  install_win11.bat  luna-os.service  luna_cli_enhanced.py  luna_desktop.py  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
win11/backend/agents/: file_agent.py  git_agent.py  linux_agent.py  package_manager.py  whatsapp_agent.py
win11/backend/agents/whatsapp_agent/: index.js  package.json
win11/backend/api/: routes.py
win11/backend/config/: paths.py
win11/backend/core/: agent_orchestrator.py  context.py  decision_engine.py  executor.py  prompt.py  voice_agent.py
win11/backend/memory/: db.py  embeddings.py  summarizer.py
win11/backend/utils/: __init__.py  adb_manager.py  audio_check.py  sys_control.py
win11/backend/voice/: stt.py  tts.py
win11/scripts/: read_web.py
win11/src/: App.tsx  types.ts
win11/src-tauri/: Cargo.toml  tauri.conf.json
win11/src/components/: DeveloperWorkspace.tsx  DeviceEcosystem.tsx  GithubMonitor.tsx  SettingsPanel.tsx
(+28 files in other folders)
