[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-os"
version = "2.0.0"
description = "AI-powered Operating System Ecosystem for Arch Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Arunachalam", email = "arunachalam@luneos.dev"}
]
keywords = ["ai", "os", "assistant", "arch-linux", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Operating System",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "google-genai>=0.3.0",
    "edge-tts>=6.1.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "groq>=0.10.0",
    "openai>=1.0.0",
    "webrtcvad>=4.3.2",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "chromadb>=0.4.0",
    "pyaudio>=0.2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/Arunachalam-gojosaturo/Luna-eco-system"
Documentation = "https://github.com/Arunachalam-gojosaturo/Luna-eco-system#readme"
Repository = "https://github.com/Arunachalam-gojosaturo/Luna-eco-system.git"
Issues = "https://github.com/Arunachalam-gojosaturo/Luna-eco-system/issues"

[project.scripts]
luna-os = "backend.cli:main"

[tool.setuptools]
packages = ["backend", "backend.agents", "backend.api", "backend.core", "backend.memory", "backend.providers", "backend.tools", "backend.voice", "backend.config"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
